--- a/projekti/styles/style.css
+++ b/projekti/styles/style.css
@@ -53,7 +53,7 @@
 
 /* centered content */
 .hero-text {
-  background-color: rgba(158, 144, 126, 0.65);
+  /*background-color: rgba(167, 145, 118, 0.45);*/
     padding: 30px;
     z-index: 10;
 }
@@ -113,14 +113,26 @@
   
   object-position: 50% 60%;
   height: 200px;
-  object-fit: cover;
+ object-fit: cover;
+ overflow: hidden;
   
-
 }
-#Muldashev-card .card-img-top {
+
+ #Muldashev-card .card-img-top {
   object-position: 50% 20%;
   height: 200px;
   object-fit: cover;
 
 }
 
+#Muldashev-card,
+#Le-pater-card,
+#intro-card {
+    transition: transform 0.5s ease;
+}
+
+#Muldashev-card:hover,
+#Le-pater-card:hover,
+#intro-card:hover {
+    transform: translateY(-10px);
+}
