--- a/projekti/styles/page2.css
+++ b/projekti/styles/page2.css
@@ -30,7 +30,7 @@
 
 /*hero bg*/
 .hero-bg {
-    background-image: url("../images/Le\ Pater/angel.jpeg") ;
+    background-image: url("../images/Le_Pater/angel.jpeg") ;
     background-size: 150%;
     background-position: 50% 15%;
     background-attachment: fixed;
