--- a/projekti/styles/page3.css
+++ b/projekti/styles/page3.css
@@ -30,7 +30,7 @@
 
 /*hero bg*/
 .hero-bg {
-    background-image: url("../images/Ernst\ Muldashev/buddha-the.jpg") ;
+    background-image: url("../images/Ernst_Muldashev/buddha-the.jpg") ;
     background-size: 120%;
     background-position: 50% 30%;
     background-attachment: fixed;
