--- a/projekti/styles/page4.css
+++ b/projekti/styles/page4.css
@@ -30,7 +30,7 @@
 
 /*hero bg*/
 .hero-bg {
-    background-image: url("../images/Le\ Pater/wisdom.jpeg") ;
+    background-image: url("../images/Le_Pater/wisdom.jpeg") ;
     background-size: 160%;
     background-position: 50% 45%;
     background-attachment: fixed;
