--- a/projekti/styles/style.css
+++ b/projekti/styles/style.css
@@ -32,7 +32,7 @@
 
 /*hero bg*/
 .hero-bg {
-    background-image: url("../images/Le\ Pater/mind.jpeg") ;
+    background-image: url("../images/Le_Pater/mind.jpeg") ;
     background-size: 150%;
     background-position: 50% 15%;
     background-attachment: fixed;
